Fix Spacing for Left/Right Aligned Media

--- a/dev/scss/article.scss
+++ b/dev/scss/article.scss
@@ -250,10 +250,12 @@
       &.alignleft,
       &.alignleft img {
         margin-left: 0;
+        margin-right: 1em;
       }
 
       &.alignright,
       &.alignright img {
+        margin-left: 1em;
         margin-right: 0;
       }
 
